overflow fix

--- a/index.css
+++ b/index.css
@@ -26,15 +26,13 @@ body {
   background-color: #e7d4be;
 }
 .head .logo {
-  margin-left: 2%;
   line-height: 5vh;
   font-family: myFont;
   font-size: 2em;
   color: #2b312e;
-  margin-left: 2%;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: start;
   padding: 10px;
 }
 
@@ -51,8 +49,8 @@ body {
 
 .head .nav ul li {
   margin-left: 15%;
-  line-height: 7vh;
-  font-size: 1.8em;
+  line-height: 8vh;
+  font-size: 1.5em;
 }
 
 .head .nav ul li a {
@@ -88,6 +86,11 @@ body {
   display: flex;
 }
 
+.webcontent .row {
+  width: 100%;
+  height: 100vh;
+}
+
 .text h2 {
   line-height: 5vh;
   color: #e7d4be;
@@ -103,8 +106,9 @@ body {
 
 img {
   overflow: hidden;
-  position: absolute;
-  top: 8vh;
-  left: 50%;
+  width: 100%;
+  clip-path: polygon(0 0, 50% 0, 50% 100%, 0 10%);
   z-index: -1;
+  position: absolute;
+  left: -1;
 }
